[gd_scene load_steps=9 format=3 uid="uid://docutuehop66x"]

[ext_resource type="Script" path="res://scripts/next_level_menu.gd" id="1_cyc4r"]
[ext_resource type="Shader" path="res://shaders/background.gdshader" id="2_p31px"]
[ext_resource type="Texture2D" uid="uid://dedk3n2d1ntu3" path="res://assets/Items & UI/Mini UI/star.png" id="2_r1w2i"]
[ext_resource type="Texture2D" uid="uid://b6bp06msf1ya2" path="res://assets/Items & UI/Mini UI/gray_star.png" id="3_vh5fn"]
[ext_resource type="Theme" uid="uid://dy2ikn1tr8vva" path="res://assets/Fonts/pause_menu.tres" id="5_xtlq6"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ywjhm"]
shader = ExtResource("2_p31px")
shader_parameter/dimensions = Vector2(1024, 600)
shader_parameter/small_stars = 50.0
shader_parameter/small_stars_far_size = 0.5
shader_parameter/small_stars_near_size = 1.0
shader_parameter/large_stars = 8.0
shader_parameter/large_stars_far_size = 0.5
shader_parameter/large_stars_near_size = 1.0
shader_parameter/far_stars_color = Color(0.5, 0, 1, 1)
shader_parameter/near_stars_color = Color(1, 1, 1, 1)
shader_parameter/base_scroll_speed = 0.05
shader_parameter/additional_scroll_speed = 0.05

[sub_resource type="InputEventAction" id="InputEventAction_8lxov"]
action = &"ui_cancel"

[sub_resource type="Shortcut" id="Shortcut_bxe5e"]
events = [SubResource("InputEventAction_8lxov")]

[node name="next_level_menu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_cyc4r")
star_texture = ExtResource("2_r1w2i")
gray_star_texture = ExtResource("3_vh5fn")

[node name="bg_overlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.254902)

[node name="ColorRect2" type="ColorRect" parent="."]
custom_minimum_size = Vector2(308, 308)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -154.0
offset_top = -154.0
offset_right = 154.0
offset_bottom = 154.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="ColorRect2"]
material = SubResource("ShaderMaterial_ywjhm")
custom_minimum_size = Vector2(300, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="menu_holder" type="VBoxContainer" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -39.0
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="HBoxContainer" type="HBoxContainer" parent="menu_holder"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="Star" type="TextureRect" parent="menu_holder/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("2_r1w2i")

[node name="Star2" type="TextureRect" parent="menu_holder/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("2_r1w2i")

[node name="Star3" type="TextureRect" parent="menu_holder/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("2_r1w2i")

[node name="HBoxContainer2" type="HBoxContainer" parent="menu_holder"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/separation = 20

[node name="QuitButton" type="Button" parent="menu_holder/HBoxContainer2"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme = ExtResource("5_xtlq6")
text = "EXIT"
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="RestartButton" type="Button" parent="menu_holder/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("5_xtlq6")
shortcut = SubResource("Shortcut_bxe5e")
text = "RESTART"

[node name="NextButton" type="Button" parent="menu_holder/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("5_xtlq6")
shortcut = SubResource("Shortcut_bxe5e")
text = "NEXT"

[connection signal="pressed" from="menu_holder/HBoxContainer2/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="menu_holder/HBoxContainer2/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="menu_holder/HBoxContainer2/NextButton" to="." method="_on_next_button_pressed"]
